discussion/kv_engine/180248/180248_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-52357: Create a per-thread audit filter cache

Previously all of the enabled audit events would look at
the list of filtered users by the thread writing them to
disk.

This patch allows for checking the filter _before_
submitting the event to the audit daemon and hence
remove any lock contention and resource consumption
we had by always trying to submit the events to the
central queue

Change-Id: I87a7121576f5863a9507ba90dd75ac15055ed200

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-09-21 11:27:33.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2022-09-21 11:27:47.000000000
Message: 
Patch Set 1: Well-Formed-1

Branch restricted. PLEASE READ this URL: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/316187/artifact/restricted.html : FAILURE
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-09-21 11:34:36.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/488/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/488/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/348/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/348/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/372/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/372/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/551/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/551/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/371/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/371/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/368/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/368/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/380/ : ABORTED

Failure of GoogleTest "SslCertTest.LoginEnabledWithoutCert":

<pre>
[ RUN      ] SslCertTest.LoginEnabledWithoutCert
[2022-09-21T11:34:26.912Z] unknown file: Failure
[2022-09-21T11:34:26.912Z] C++ exception with description "EOF: Connection reset by peer" thrown in the test body.
[2022-09-21T11:34:26.912Z] [  FAILED  ] SslCertTest.LoginEnabledWithoutCert (406 ms)
SslCertTest.LoginEnabledWithoutCert
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/380/ )

Test exceeded the timeout:
[2022-09-21T11:34:28.664Z] /usr/bin/timeout: the monitored command dumped core ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/380/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/380/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/356/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/356/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/356/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/auditd/tests/audit_event_filter_test.cc:35:35: error: implicit instantiation of undefined template "nlohmann::basic_json<std::map, std::vector, std::__cxx11::basic_string<char>, bool, long, unsigned long, double, std::allocator, adl_serializer, std::vector<unsigned char, std::allocator<unsigned char> > >" [clang-diagnostic-error]
            auto json = nlohmann::json::parse(
                                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/build-kv_engine-clang-tidy/tlm/deps/json.exploded/include/nlohmann/json_fwd.hpp:38:7: note: template is declared here
class basic_json;
      ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/356/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/auditd/tests/audit_event_filter_test.cc:35:35:
error: implicit instantiation of undefined template "nlohmann::basic_json<std::map, std::vector, std::__cxx11::basic_string<char>, bool, long, unsigned long, double, std::allocator, adl_serializer, std::vector<unsigned char, std::allocator<unsigned char> > >" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/356/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/359/ : FAILURE

Compile error at [2022-09-21T11:31:27.260Z] ../kv_engine/auditd/tests/audit_event_filter_test.cc:35:35:
error: implicit instantiation of undefined template "nlohmann::basic_json<std::map, std::vector, std::__cxx11::basic_string<char>, bool, long, unsigned long, double, std::allocator, adl_serializer, std::vector<unsigned char, std::allocator<unsigned char> > >"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/359/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/19747/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
